# episodic_db

./: .gitignore  README.md  demo_compress.py  episodicdb.md  field.md  pyproject.toml
docs/: INDEX.md  architecture.md  benchmarking.md  capture_system.md  compression.md  data_model.md  development_guide.md  episode_assembly.md  episode_pipeline.md  getting_started.md  labeling_algorithm.md  multiagent_dependency_overview.md  multiagent_dependency_tracking.md  query_system.md  schema.md  session_example_flask-4045.json  waste_types.md
experiments/: multiagent_dependency_sim.py
reports/: pretooluse_retrieval_verification.md
src/episodic_db/: __init__.py  cli.py  compress.py  config.py
src/episodic_db/bench/: __init__.py  base.py  executor.py  runner.py
src/episodic_db/capture/: __init__.py  env_capture.py  hook_handler.py  settings_factory.py
src/episodic_db/embedding/: __init__.py  embedder.py  indexer.py  serializer.py
src/episodic_db/episode/: __init__.py  assembler.py  metrics.py  signature.py  waste_classifier.py
src/episodic_db/label/: __init__.py  contribution.py  outcome.py  pipeline.py  waste_signals.py
src/episodic_db/proxy/: __init__.py  bedrock.py  port_utils.py  pricing.py  server.py  sse_parser.py  token_bridge.py
src/episodic_db/query/: __init__.py  facet_search.py  vector_search.py
src/episodic_db/store/: __init__.py  blob_store.py  db.py  edges.py  nodes.py  schema.py
tests/: conftest.py  test_embedding.py  test_hook_handler.py  test_integration.py  test_pretooluse_retrieval.py
