[project]
name = "episodic-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "certifi",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "click>=8.0",
]

[project.optional-dependencies]
bench = ["datasets>=2.0"]
openai = ["openai>=1.0"]

[project.scripts]
episodic-db = "episodic_db.cli:main"
episodic-bench = "episodic_db.bench.runner:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
